Perkin-UAT/force-app/main/default/objects/Lead/Lead.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>