Perkin-UAT/force-app/main/default/objects/Lead/fields/ALH_List__c.field-meta.xml
<CustomField>
    <fullName>ALH_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ALH List</label>
    <type>Checkbox</type>
</CustomField>