Perkin-UAT/force-app/main/default/objects/Lead/fields/Allow_Sync__c.field-meta.xml
<CustomField>
    <fullName>Allow_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Sync</label>
    <type>Checkbox</type>
</CustomField>