Perkin-UAT/force-app/main/default/objects/Lead/fields/AMER_INF__c.field-meta.xml
<CustomField>
    <fullName>AMER_INF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AMER</label>
    <type>Checkbox</type>
</CustomField>