Perkin-UAT/force-app/main/default/objects/Lead/fields/Analytics_Tools_Used__c.field-meta.xml
<CustomField>
    <fullName>Analytics_Tools_Used__c</fullName>
    <label>Analytics Tools Used</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GeneSifter</fullName>
            </value>
            <value>
                <fullName>Mutation Surveyor</fullName>
            </value>
            <value>
                <fullName>Sequencher</fullName>
            </value>
            <value>
                <fullName>SeqScape</fullName>
            </value>
            <value>
                <fullName>Variant Reporter</fullName>
            </value>
            <value>
                <fullName>Phred/Phrap/Consed</fullName>
            </value>
            <value>
                <fullName>LaserGene</fullName>
            </value>
            <value>
                <fullName>Staden Package</fullName>
            </value>
            <value>
                <fullName>VectorNTI</fullName>
            </value>
            <value>
                <fullName>Aligner</fullName>
            </value>
            <value>
                <fullName>Gene Workbench</fullName>
            </value>
            <value>
                <fullName>In-house tools</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>