Perkin-UAT/force-app/main/default/objects/Lead/fields/batch_import_notes__c.field-meta.xml
<CustomField>
    <fullName>batch_import_notes__c</fullName>
    <description>This field is added for use when importing batch leads/contacts. It iwll retain original batch upload info and data that does not fit into fields.</description>
    <inlineHelpText>This field is added for use when importing batch leads/contacts. It iwll retain original batch upload info and data that does not fit into fields.</inlineHelpText>
    <label>batch import notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>