Perkin-UAT/force-app/main/default/objects/Lead/fields/BD_Created_From_Interaction__c.field-meta.xml
<CustomField>
    <fullName>BD_Created_From_Interaction__c</fullName>
    <description>Populated by flow when a Lead is created from an Interaction. Captures the Interaction ID</description>
    <label>Created From Interaction</label>
    <length>18</length>
    <type>Text</type>
</CustomField>