Perkin-UAT/force-app/main/default/objects/Lead/fields/BD_Created_Today__c.field-meta.xml
<CustomField>
    <fullName>BD_Created_Today__c</fullName>
    <formula>IF(
    DATEVALUE(CreatedDate) = TODAY(), TRUE, FALSE
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Today</label>
    <type>Checkbox</type>
</CustomField>