Perkin-UAT/force-app/main/default/objects/Lead/fields/BD_Sales_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>BD_Sales_Lost_Reason__c</fullName>
    <description>Used to track sales status for Sales Engagement users</description>
    <label>Sales Lost Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>