Perkin-UAT/force-app/main/default/objects/Lead/fields/BD_Sales_Quote_Value__c.field-meta.xml
<CustomField>
    <fullName>BD_Sales_Quote_Value__c</fullName>
    <description>Used for Sales Engagement users to track the value of pitched quotes</description>
    <label>Sales Quote Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>