Perkin-UAT/force-app/main/default/objects/Lead/fields/BE__c.field-meta.xml
<CustomField>
    <fullName>BE__c</fullName>
    <description>Business Element/Business Unit</description>
    <inlineHelpText>Primary Business Unit for this Lead</inlineHelpText>
    <label>BE</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dx</fullName>
            </value>
            <value>
                <fullName>INF</fullName>
            </value>
            <value>
                <fullName>LST</fullName>
            </value>
            <value>
                <fullName>MED</fullName>
            </value>
            <value>
                <fullName>SVC</fullName>
            </value>
            <value>
                <fullName>ONE</fullName>
            </value>
            <value>
                <fullName>EH</fullName>
            </value>
            <value>
                <fullName>SDx,Dx</fullName>
            </value>
            <value>
                <fullName>SDx</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>