Perkin-UAT/force-app/main/default/objects/Lead/fields/Bounced_Email__c.field-meta.xml
<CustomField>
    <fullName>Bounced_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Syncs with Eloqua on bounce backs. Workflow rule unchecks this box when email is upadated.</description>
    <inlineHelpText>Checkbox = a bounced email from an eloqua campaign, please correct email if known.</inlineHelpText>
    <label>Bounced Email</label>
    <type>Checkbox</type>
</CustomField>