Perkin-UAT/force-app/main/default/objects/Lead/fields/BU_INF__c.field-meta.xml
<CustomField>
    <fullName>BU_INF__c</fullName>
    <label>BU</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASLS</fullName>
            </value>
            <value>
                <fullName>LST</fullName>
            </value>
            <value>
                <fullName>SVC</fullName>
            </value>
            <value>
                <fullName>IDS</fullName>
            </value>
            <value>
                <fullName>MED</fullName>
            </value>
            <value>
                <fullName>EDx</fullName>
            </value>
            <value>
                <fullName>Dx</fullName>
            </value>
            <value>
                <fullName>SDx</fullName>
            </value>
            <value>
                <fullName>INF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>