Perkin-UAT/force-app/main/default/objects/Lead/fields/BusinessLine_INF__c.field-meta.xml
<CustomField>
    <fullName>BusinessLine_INF__c</fullName>
    <inlineHelpText>CambridgeSoft name = Product Line PKI</inlineHelpText>
    <label>Business Line</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Personal Applications</fullName>
            </value>
            <value>
                <fullName>Enterprise R-D</fullName>
            </value>
            <value>
                <fullName>QA/QC</fullName>
            </value>
            <value>
                <fullName>Elements</fullName>
            </value>
            <value>
                <fullName>Analysis-Visualisation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>