Perkin-UAT/force-app/main/default/objects/Lead/fields/Buying_Horizon__c.field-meta.xml
<CustomField>
    <fullName>Buying_Horizon__c</fullName>
    <label>Buying Horizon</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-3 Months</fullName>
            </value>
            <value>
                <fullName>3-6 Months</fullName>
            </value>
            <value>
                <fullName>6-12 Months</fullName>
            </value>
            <value>
                <fullName>12+ Months</fullName>
            </value>
            <value>
                <fullName>Not Asked</fullName>
            </value>
            <value>
                <fullName>No Plans</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>