Perkin-UAT/force-app/main/default/objects/Lead/fields/Campaign_Description__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Description__c</fullName>
    <label>Campaign Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>