Perkin-UAT/force-app/main/default/objects/Lead/fields/Campaign_Survey_Q__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Survey_Q__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>lookup used by Qualtrics Survey tool to add members to a campaign</description>
    <label>Campaign for Survey</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>