Perkin-UAT/force-app/main/default/objects/Lead/fields/CaptureDate__c.field-meta.xml
<CustomField>
    <fullName>CaptureDate__c</fullName>
    <description>Date in which lead was entered into AdTrack</description>
    <label>CaptureDate</label>
    <type>Date</type>
</CustomField>