Perkin-UAT/force-app/main/default/objects/Lead/fields/Chemical_List__c.field-meta.xml
<CustomField>
    <fullName>Chemical_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Chemical List</label>
    <type>Checkbox</type>
</CustomField>