Perkin-UAT/force-app/main/default/objects/Lead/fields/Chip_Type__c.field-meta.xml
<CustomField>
    <fullName>Chip_Type__c</fullName>
    <label>Chip Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Affymetrix</fullName>
            </value>
            <value>
                <fullName>CodeLink</fullName>
            </value>
            <value>
                <fullName>Illumina</fullName>
            </value>
            <value>
                <fullName>Agilent</fullName>
            </value>
            <value>
                <fullName>In-house</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>