Perkin-UAT/force-app/main/default/objects/Lead/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <label>Comment</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>