Perkin-UAT/force-app/main/default/objects/Lead/fields/Contact_Method_INF__c.field-meta.xml
<CustomField>
    <fullName>Contact_Method_INF__c</fullName>
    <label>Contact Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>