Perkin-UAT/force-app/main/default/objects/Lead/fields/Created_by_Lead__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Lead__c</fullName>
    <description>Field converts to Opp object.  Used to easily identify Opps that were created upon Lead conversion (field on Opp can be used in validations/workflow).</description>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by Lead</label>
    <type>Checkbox</type>
</CustomField>