Perkin-UAT/force-app/main/default/objects/Lead/fields/Cumulative_Sold_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Sold_Amount__c</fullName>
    <label>Cumulative Sold Amount</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>