Perkin-UAT/force-app/main/default/objects/Lead/fields/Date_Spiff_sent_to_referring_rep__c.field-meta.xml
<CustomField>
    <fullName>Date_Spiff_sent_to_referring_rep__c</fullName>
    <label>Date Spiff sent to referring rep:</label>
    <type>Date</type>
</CustomField>