Perkin-UAT/force-app/main/default/objects/Lead/fields/Days_to_Convert__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Convert__c</fullName>
    <formula>round(ConvertedDate - datevalue(CreatedDate),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Convert</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>