Perkin-UAT/force-app/main/default/objects/Lead/fields/Disease_Area_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Disease_Area_of_Interest__c</fullName>
    <description>Maps to corresponding field on Contact</description>
    <inlineHelpText>Please add detail to better qualify lead</inlineHelpText>
    <label>Disease Area of Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Angiogenesis</fullName>
            </value>
            <value>
                <fullName>Apoptosis</fullName>
            </value>
            <value>
                <fullName>Arthritis</fullName>
            </value>
            <value>
                <fullName>Asthma</fullName>
            </value>
            <value>
                <fullName>Atherosclerosis</fullName>
            </value>
            <value>
                <fullName>Biodistribution</fullName>
            </value>
            <value>
                <fullName>Bioluminescence</fullName>
            </value>
            <value>
                <fullName>Cancer</fullName>
            </value>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Cardiology, Pediatric</fullName>
            </value>
            <value>
                <fullName>Cardiovascular</fullName>
            </value>
            <value>
                <fullName>Cell Tracking</fullName>
            </value>
            <value>
                <fullName>CNS</fullName>
            </value>
            <value>
                <fullName>Core Imaging Facility</fullName>
            </value>
            <value>
                <fullName>Diabetes</fullName>
            </value>
            <value>
                <fullName>Diagnostic Imaging</fullName>
            </value>
            <value>
                <fullName>Drug Delivery</fullName>
            </value>
            <value>
                <fullName>Drug Development</fullName>
            </value>
            <value>
                <fullName>Gastric Emptying</fullName>
            </value>
            <value>
                <fullName>Gastric motility</fullName>
            </value>
            <value>
                <fullName>General Imaging</fullName>
            </value>
            <value>
                <fullName>Genetics</fullName>
            </value>
            <value>
                <fullName>Genetic Counseling</fullName>
            </value>
            <value>
                <fullName>GFP</fullName>
            </value>
            <value>
                <fullName>GI</fullName>
            </value>
            <value>
                <fullName>Hypertension</fullName>
            </value>
            <value>
                <fullName>Immunology</fullName>
            </value>
            <value>
                <fullName>Infectious Diseases</fullName>
            </value>
            <value>
                <fullName>Inflammation</fullName>
            </value>
            <value>
                <fullName>Ischemia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>