Perkin-UAT/force-app/main/default/objects/Lead/fields/Distributor_Name__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Name__c</fullName>
    <inlineHelpText>Please fill in the Distributor name when the Lead source is a Distributor</inlineHelpText>
    <label>Distributor Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>