Perkin-UAT/force-app/main/default/objects/Lead/fields/DMQL__c.field-meta.xml
<CustomField>
    <fullName>DMQL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To check DMQL when lead is coming directly to a sales rep from SAP Web MEthods</description>
    <label>DMQL</label>
    <type>Checkbox</type>
</CustomField>