Perkin-UAT/force-app/main/default/objects/Lead/fields/Do_Not_Call__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Call (c)</label>
    <type>Checkbox</type>
</CustomField>