Perkin-UAT/force-app/main/default/objects/Lead/fields/Do_Not_Mail_Postal__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Mail_Postal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Mail (Postal)</label>
    <type>Checkbox</type>
</CustomField>