Perkin-UAT/force-app/main/default/objects/Lead/fields/Do_not_Run_Assignment_Rules_INF__c.field-meta.xml
<CustomField>
    <fullName>Do_not_Run_Assignment_Rules_INF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used to ensure that assignment rules should not run for the leads which are check true</description>
    <label>Do not Run Assignment Rules</label>
    <type>Checkbox</type>
</CustomField>