Perkin-UAT/force-app/main/default/objects/Lead/fields/Employee_Name_INF__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name_INF__c</fullName>
    <inlineHelpText>Enter Employee Name if Lead Source is Employee Referal</inlineHelpText>
    <label>Employee Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>