Perkin-UAT/force-app/main/default/objects/Lead/fields/Energy_List__c.field-meta.xml
<CustomField>
    <fullName>Energy_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Energy List</label>
    <type>Checkbox</type>
</CustomField>