Perkin-UAT/force-app/main/default/objects/Lead/fields/eq_Contact_Requested__c.field-meta.xml
<CustomField>
    <fullName>eq_Contact_Requested__c</fullName>
    <description>Part of Eloqua integration. If the value of this field is TRUE, then the Lead is considered to be a Marketing Qualified Lead (MQL)</description>
    <label>Contact Requested</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
                <default>true</default>
                <label>Unknown</label>
            </value>
            <value>
                <fullName>False</fullName>
            </value>
            <value>
                <fullName>True</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>