Perkin-UAT/force-app/main/default/objects/Lead/fields/eq_Is_Eloqua_Lead__c.field-meta.xml
<CustomField>
    <fullName>eq_Is_Eloqua_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If TRUE, this Lead came from the Eloqua integration.</description>
    <inlineHelpText>If TRUE, this Lead came from the Eloqua integration.</inlineHelpText>
    <label>Is Eloqua Lead</label>
    <type>Checkbox</type>
</CustomField>