Perkin-UAT/force-app/main/default/objects/Lead/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <description>Marketing Activity Type</description>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tradeshows</fullName>
            </value>
            <value>
                <fullName>Web-cast</fullName>
            </value>
            <value>
                <fullName>Virtual Booth</fullName>
            </value>
            <value>
                <fullName>PKI Web-site</fullName>
            </value>
            <value>
                <fullName>E-mail Campaign</fullName>
            </value>
            <value>
                <fullName>On-line Newsletter</fullName>
            </value>
            <value>
                <fullName>On-line BuyerGuides/Directories</fullName>
            </value>
            <value>
                <fullName>Seminar</fullName>
            </value>
            <value>
                <fullName>Usergroups</fullName>
            </value>
            <value>
                <fullName>Workshops</fullName>
            </value>
            <value>
                <fullName>Blitz</fullName>
            </value>
            <value>
                <fullName>Vendor Show</fullName>
            </value>
            <value>
                <fullName>Account Specific Event</fullName>
            </value>
            <value>
                <fullName>Customer Event</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>Promotional Items</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Newsletter</fullName>
            </value>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>Public Relations</fullName>
            </value>
            <value>
                <fullName>BuyerGuides/Directories</fullName>
            </value>
            <value>
                <fullName>Catalog</fullName>
            </value>
            <value>
                <fullName>ISR Outbound Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>