Perkin-UAT/force-app/main/default/objects/Lead/fields/ExistingContact__c.field-meta.xml
<CustomField>
    <fullName>ExistingContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is pulled into the the Custom Lead Conversion S.FLOW_2410: Lead Convert Default</description>
    <inlineHelpText>If the existing Contact is known, you can fill it in here and it will be used during lead conversion.</inlineHelpText>
    <label>Existing Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Merged_Flag__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Contact.FirstName</field>
            <operation>notContain</operation>
            <value>1.</value>
        </filterItems>
        <filterItems>
            <field>Contact.LastName</field>
            <operation>notContain</operation>
            <value>1.</value>
        </filterItems>
        <infoMessage>Search Contacts on MDM Approved Accounts</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads (Existing Contact)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>