Perkin-UAT/force-app/main/default/objects/Lead/fields/FGP_List__c.field-meta.xml
<CustomField>
    <fullName>FGP_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FGP List</label>
    <type>Checkbox</type>
</CustomField>