Perkin-UAT/force-app/main/default/objects/Lead/fields/First_Time_Status_Change__c.field-meta.xml
<CustomField>
    <fullName>First_Time_Status_Change__c</fullName>
    <label>First Time Status Change</label>
    <type>DateTime</type>
</CustomField>