Perkin-UAT/force-app/main/default/objects/Lead/fields/Food_Fragrance_List__c.field-meta.xml
<CustomField>
    <fullName>Food_Fragrance_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Food &amp; Fragrance List</label>
    <type>Checkbox</type>
</CustomField>