Perkin-UAT/force-app/main/default/objects/Lead/fields/fxConvertMethod__c.field-meta.xml
<CustomField>
    <fullName>fxConvertMethod__c</fullName>
    <description>This is used to determine how the lead was converted, native convert, Flow Custom Convert, or API. Filled in by the S.FLOW_2410: Lead Convert Default if custom.</description>
    <inlineHelpText>This is used to determine how the lead was converted, native convert, Flow Custom Convert, or API. Filled in by the S.FLOW_2410: Lead Convert Default if custom.</inlineHelpText>
    <label>fxConvertMethod</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Native</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>