Perkin-UAT/force-app/main/default/objects/Lead/fields/fxDaysUnconverted__c.field-meta.xml
<CustomField>
    <fullName>fxDaysUnconverted__c</fullName>
    <description>Determines the number of days lead is unconverted since it was created. -1 indicates lead has been converted.</description>
    <formula>IF(IsConverted = false
  , TODAY() - DATEVALUE(CreatedDate) 
  , -1
)</formula>
    <label>fxDaysUnconverted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>